oxiplate-derive/tests/broken/include/missing-open-quote.stderr
error: Expected "
 --> tests/broken/include/missing-open-quote.rs:4:33
  |
4 | #[oxiplate_inline(r#"{% include include.html.oxip" %}"#)]
  |                                 ^^^^^^^^^^^^^^^^^^^^^
